--- a/css/site.scss
+++ b/css/site.scss
@@ -65,6 +65,26 @@ h1 {
 
 }
 
+blockquote {
+  background-color: rgba(255,255,255,0.4);
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  margin-left: 0;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
+}
+
 #sidebar {
 
 }
